k8s/traefik-ingressroute/example/2.wrr/1.apps.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  app1
  labels:
    app:  app1
spec:
  selector:
    matchLabels:
      app: app1
  replicas: 1
  template:
    metadata:
      labels:
        app:  app1
    spec:
      containers:
      - name:  app1
        image:  traefik/whoami
        ports:
        - containerPort:  80
          name:  app1

---
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  selector:
    app: app1
  ports:
  - name: web
    protocol: TCP
    port: 80



---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  app2
  labels:
    app:  app2
spec:
  selector:
    matchLabels:
      app: app2
  replicas: 1
  template:
    metadata:
      labels:
        app:  app2
    spec:
      containers:
      - name:  app2
        image:  traefik/whoami
        ports:
        - containerPort:  80
          name:  app2
---
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  selector:
    app: app2
  ports:
  - name: web
    protocol: TCP
    port: 80
